Inicializacion de Configuraciones
Falta configurar el MSSQL para el Sequelize, y el crear base de datos si no existe

--- a/api/package.json
+++ b/api/package.json
@@ -30,7 +30,8 @@
 		"sequelize": "^6.3.5",
 		"socket.io": "^2.3.0",
 		"swagger-jsdoc": "^5.0.0",
-		"swagger-ui-express": "^4.1.4"
+		"swagger-ui-express": "^4.1.4",
+		"tedious": "^9.2.1"
 	},
 	"devDependencies": {
 		"nodemon": "^2.0.4"
